# Agentic-AI---LangGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
10_Chatbot Evaluation/: Evaluation of Chatbot.ipynb
11_RAG Evaluation/: Evaluation of RAG.ipynb
1_LangGraph Basic/: 1_Simple LangGraph.ipynb  2_Chatbot using Groq.ipynb  3_Data Classes.ipynb  4_LLM and Tools.ipynb  5_Chatbot - Multiple Tools.ipynb
2_LangGraph Advance/: 1_ReAct Agents.ipynb  2_Streaming.ipynb  3_AStreaming.ipynb
3_LangSmith - Debugging/: LangSmith_Agent.py  langgraph.json
4_Complete LangGraph - Agentic RAG/1_Basic Agentic RAG/: Basic Agentic RAG.ipynb
4_Complete LangGraph - Agentic RAG/2_Agentic RAG - ReAct/: ReAct RAG.ipynb
4_Complete LangGraph - Agentic RAG/3_Agentic RAG - ReAct + Tools/: React + Tools RAG.ipynb
4_Complete LangGraph - Agentic RAG/4_Agentic RAG - Tools/: LangChain and LangGraph Tools RAG.ipynb
4_Complete LangGraph - Agentic RAG/5_Agentic RAG - Chain Of Thought/: Chain Of Thought.ipynb
4_Complete LangGraph - Agentic RAG/6_Agentic RAG - Self Reflection/: Self Reflection.ipynb
4_Complete LangGraph - Agentic RAG/7_Agentic RAG - Query Planning and Decomposition/: Query Planning and Decomposition.ipynb
4_Complete LangGraph - Agentic RAG/8_Agentic RAG - Iterative Retrieval/: Iterative Retrieval with Self Reflection.ipynb
6_Corrective RAG/: Corrective RAG.ipynb
7_Adaptive RAG/: Adaptive RAG.ipynb
8_Persistant Memory in RAG/: RAG with Persistant Memory using LangGraph.ipynb
9_Cache Augmented Generation/: Cache Augmented Generation.ipynb
(+6 files in other folders)
